# nelson

./: .gitignore  FIXES_SUMMARY.md  FUTURE_FEATURES.md  PRD_NELSON_PRD_IMPLEMENTATION.md  README.md  justfile  next_tasks.md  platform-requirements.md  pyproject.toml
docs/: comprehensive-mode.md  nelson-prd-cli.md
examples/: blocking-workflow.md  sample-prd.md
scripts/: diagnose_review_scope.py
src/nelson/: __init__.py  __main__.py  archiver.py  audit_log.py  blocked_handling.py  circuit_breaker.py  cli.py  commit_summary.py  config.py  decisions_log.py  depth.py  deviations.py  git_auth.py  git_utils.py  interaction.py  logging_config.py  phases.py  plan_models.py  plan_parser.py  plan_parser_json.py  plan_validation.py  planning_questions.py  ui.py  (+14 more)
tests/: conftest.py  test_archiver.py  test_audit_log.py  test_blocked_handling.py  test_circuit_breaker.py  test_cli.py  test_commit_summary.py  test_config.py  test_decisions_log.py  test_depth.py  test_deviations.py  test_git_auth.py  test_git_utils.py  test_interaction.py  test_logging_config.py  test_phases.py  test_placeholder.py  test_plan_models.py  test_plan_parser.py  test_plan_parser_json.py  test_plan_validation.py  test_planning_questions.py  test_prd_branch.py  test_prd_cli.py  test_prd_orchestrator.py  test_prd_orchestrator.py.backup  test_prd_parser.py  test_prd_state.py  test_prd_task_state.py  test_progress_monitor.py  test_prompts.py  test_providers_base.py  test_providers_claude.py  test_run_manager.py  test_state.py  test_status_parser.py  test_transitions.py  test_verification.py  test_workflow.py
(+21 files in other folders)
