[project]
name = "nelson"
version = "0.1.0"
description = "AI orchestration CLI for autonomous development workflows"
readme = "README.md"
license = {text = "MPL-2.0"}
authors = [
    { name = "John Anderson", email = "sontek@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "anthropic>=0.18.0",
]

[project.scripts]
nelson = "nelson.cli:main"
nelson-prd = "nelson.prd_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=nelson --cov-report=term-missing"
# Timeout for each test to prevent hangs (300 seconds = 5 minutes)
timeout = 300
